--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.4.4",
     "react-markdown": "^8.0.7",
+    "react-reveal": "^1.2.2",
     "sharp": "^0.32.1"
   },
   "devDependencies": {
