--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-intersection-observer": "^9.4.4",
     "react-markdown": "^8.0.7",
     "react-reveal": "^1.2.2",
-    "sharp": "^0.32.1"
+    "sharp": "^0.32.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
