--- a/package.json
+++ b/package.json
@@ -13,36 +13,37 @@
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.15",
+    "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@sendgrid/mail": "^7.7.0",
     "@types/next": "^9.0.0",
-    "@types/react": "^18.2.8",
+    "@types/react": "^18.2.33",
     "clsx": "^1.2.1",
     "i18next": "^22.5.1",
-    "next": "^13.4.4",
+    "next": "^13.5.6",
     "next-i18next": "^13.3.0",
-    "next-sitemap": "^4.1.3",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.3.1",
-    "react-icons": "^4.10.1",
-    "react-intersection-observer": "^9.4.4",
+    "react-icons": "^4.11.0",
+    "react-intersection-observer": "^9.5.2",
     "react-markdown": "^8.0.7",
     "react-reveal": "^1.2.2",
-    "sharp": "^0.32.1",
+    "sharp": "^0.32.6",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "^20.2.5",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.42.0",
-    "eslint-config-next": "^13.4.4",
-    "postcss": "^8.4.24",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/node": "^20.8.9",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.52.0",
+    "eslint-config-next": "^13.5.6",
+    "postcss": "^8.4.31",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.5",
+    "typescript": "5.2.2"
   }
 }
