--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@sendgrid/mail": "^7.7.0",
@@ -25,6 +26,7 @@
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.7",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.3.1",
     "react-icons": "^4.12.0",
