--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@heroicons/react": "^2.0.18",
     "@sendgrid/mail": "^7.7.0",
     "@types/next": "^9.0.0",
-    "@types/react": "^18.2.38",
+    "@types/react": "^18.2.42",
     "clsx": "^1.2.1",
     "i18next": "^22.5.1",
     "next": "^13.5.6",
@@ -31,21 +31,23 @@
     "react-i18next": "^12.3.1",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
-    "react-markdown": "^8.0.7",
+    "react-markdown": "^9.0.1",
     "react-reveal": "^1.2.2",
+    "rehype-raw": "^7.0.0",
     "sharp": "^0.32.6",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "vfile": "^6.0.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "^20.10.0",
+    "@types/node": "^20.10.3",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.54.0",
+    "eslint": "^8.55.0",
     "eslint-config-next": "^13.5.6",
-    "postcss": "^8.4.31",
+    "postcss": "^8.4.32",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^3.3.6",
     "typescript": "5.2.2"
   }
 }
