--- a/package.json
+++ b/package.json
@@ -13,41 +13,42 @@
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
+    "@emotion/react": "^11.14.0",
+    "@headlessui/react": "^1.7.19",
+    "@heroicons/react": "^2.2.0",
     "@sendgrid/mail": "^7.7.0",
     "@types/next": "^9.0.0",
-    "@types/react": "^18.2.42",
+    "@types/react": "^18.3.26",
     "clsx": "^1.2.1",
     "i18next": "^22.5.1",
-    "next": "^13.5.6",
+    "next": "^13.5.11",
     "next-i18next": "^13.3.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
-    "react": "^18.2.0",
-    "react-awesome-reveal": "^4.2.7",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-awesome-reveal": "^4.3.1",
+    "react-dom": "^18.3.1",
     "react-i18next": "^12.3.1",
     "react-icons": "^4.12.0",
-    "react-intersection-observer": "^9.5.3",
-    "react-markdown": "^9.0.1",
+    "react-intersection-observer": "^9.16.0",
+    "react-markdown": "^9.1.0",
     "react-reveal": "^1.2.2",
     "rehype-raw": "^7.0.0",
     "sharp": "^0.32.6",
     "slugify": "^1.6.6",
-    "vfile": "^6.0.1"
+    "vfile": "^6.0.3"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "^20.10.3",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.55.0",
-    "eslint-config-next": "^13.5.6",
-    "postcss": "^8.4.32",
+    "@tailwindcss/typography": "^0.5.19",
+    "@types/node": "^20.19.20",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^13.5.11",
+    "postcss": "^8.5.6",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "tailwindcss": "^3.3.6",
+    "tailwindcss": "^3.4.18",
     "typescript": "5.2.2"
-  }
+  },
+  "packageManager": "pnpm@10.12.4+sha512.5ea8b0deed94ed68691c9bad4c955492705c5eeb8a87ef86bc62c74a26b037b08ff9570f108b2e4dbd1dd1a9186fea925e527f141c648e85af45631074680184"
 }
